--- a/styles/style.css
+++ b/styles/style.css
@@ -7,40 +7,18 @@
 .context-menu {
   display: none;
   position: absolute;
-  width: 230px;
-  height: 230px;
+  width: 220px;
+  height: 220px;
   margin:0;
   padding:0;
+  border: solid 1px red;
 }
 
 .context-menu--active {
   display: block;
 }
 
-.context-menu-button{
-    width: 110px;
-    height: 110px;
-    position: absolute;
-    cursor: pointer;
+circle {
+  fill: rgba(0,0,0,0);
+  stroke-width: 60;
 }
-
-.context-menu-pie{
-    width:  200px; 
-    height: 200px; 
-    border-radius: 100%; 
-    border: 60px solid rgba(0,0,0,0.7); 
-    background: transparent; 
-    clip: rect(-10px, 110px, 110px, -10px); 
-    position: absolute; 
-    color: #fff; 
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-.context-menu-text { 
-    position: relative; 
-    display: block; 
-    font-size: 12px; 
-    color: #fff; 
-    text-align: center; 
-    margin-top: 25px; 
-} 
