--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@
   height: 220px;
   margin:0;
   padding:0;
-  border: solid 1px red;
 }
 
 .context-menu--active {
@@ -19,6 +18,13 @@
 }
 
 circle {
+  pointer-events: stroke;
   fill: rgba(0,0,0,0);
-  stroke-width: 60;
+  stroke-width: 40;
+
 }
+
+circle:hover{
+  stroke: #555
+}
+
