--- a/src/pie-cm_core.css
+++ b/src/pie-cm_core.css
@@ -1,13 +1,3 @@
-body{
-  background: #666;
-}
-.menuable{
-    border:solid 1px black;
-    background-color: blue;
-    margin-bottom:  55px;
-}
-
-/* CORE BEGIN */
 
 .pie-context-menu {
   display: none;
@@ -19,7 +9,6 @@ body{
 .pie-context-menu--active {
   display: block;
 }
-
 
 .pie-context-menu svg {
   width: 100%;
@@ -44,16 +33,13 @@ body{
     background: none;
 }
 
-/* CORE END */
-
-/* PCM Options BEGIN */
+/* OPTIONS */
 
 .pie-context-menu circle.pcm_center{
   fill:rgba(166,178, 190,1);
 }
 
 .pie-context-menu circle.pcm_button{
-  
   stroke:rgba(238, 236, 246,1);
 }
 .pie-context-menu circle.pcm_button--hover{
@@ -71,5 +57,3 @@ body{
 .pie-context-menu text.pcm_icon--hover{
   fill:#eee;
 }
-
-/* PCM Options END */
